# online_cinema

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/models/: 1_20260701160336_None.py  2_20260701160349_set_coloms_unique.py  3_20260703183200_add_poster_id.py  4_20260703184516_add_rating_to_movies.py  5_20260703202148_edit_movie_model.py  6_20260704011217_add_review_watchhistory_wathlist_models.py  7_20260704144611_remove_watchhistory_and_review_models.py
src/: __init__.py
src/app/core/: auth_cfg.py  config.py  db.py  jinja2.py  lifespan.py
src/app/middlewares/: __init__.py  auth.py
src/app/models/: __init__.py  base.py  extra.py  movie.py  user.py
src/app/routers/: __init__.py  admin.py  auth.py  index.py  pages.py  profile.py  watchlist.py
src/app/schemas/enums/: __init__.py  role_enums.py
src/app/schemas/requests/: admin.py  auth.py  movie.py
src/app/schemas/responses/: admin.py  auth.py  profile.py
src/app/utils/: depends.py  hashing.py  orm.py
src/static/css/: style.css  styles.css
src/static/js/: main.js
src/templates/: about.html  base.html  index.html  login.html  movie_detail.html  movies.html  profile.html  register.html  watch.html  watchlist.html
