[project]
name = "online-cinema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich>=0.8.1",
    "asyncpg>=0.31.0",
    "authx>=1.7.1",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "tomlkit>=0.15.0",
    "tortoise-orm==0.24.0",
    "tzdata>=2026.2",
    "uvicorn>=0.49.0",
]

[tool.aerich]
tortoise_orm = "src.app.core.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
